syntax = "proto3";
option go_package = "gRPC/proto";


message Bid { 
    int64 id = 1;
    int64 amount = 2;
    bool fromLeader = 3;
}

message Ack { }

message Result {
    string result = 1;
}

message ElectionStatus {
    int64 serverId = 1;
}

message Empty { }

service AuctionSystem {
    rpc MakeBid(Bid) returns (Ack) {}
    rpc GetResult(Empty) returns (Result) {}
    rpc RunElection(ElectionStatus) returns (Empty) {}
}
